--- a/Spring_Security_Turotial/pom.xml
+++ b/Spring_Security_Turotial/pom.xml
@@ -14,6 +14,7 @@
         <spring.version>3.2.15.RELEASE</spring.version>
         <hibernate.version>4.1.12.Final</hibernate.version>
         <mysql.connector.version>5.1.36</mysql.connector.version>
+        <spring.security.version>3.2.9.RELEASE</spring.security.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,24 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
 
     </dependencies>
